<resources>
    <string name="app_name">PswStorer</string>
    <string name="nome_sito_add_credenziale">NOME SITO:</string>
    <string name="descrizione_sito_add_credenziale">DESCRIZIONE SITO:</string>
    <string name="password_add_credenziale">PASSWORD:</string>
    <string name="inserisci_nome_sito">Inserisci nome sito</string>
    <string name="inserisci_descrizione_sito">Inserisci descrizione sito</string>
    <string name="inserisci_password_sito">Inserisci password sito</string>
    <string name="credenziali_breadcrumb">Credenziali</string>
    <string name="nessun_requestcode_censito">Errore generico risposta</string>
    <string name="aggiunta_credenziale_ko">Credenziale non aggiunta</string>
    <string name="credenziale_nome">NOME:</string>
    <string name="credenziale_descrizione">DESCRIZIONE:</string>
    <string name="credenziale_utenza">UTENZA:</string>
    <string name="credenziale_valore">VALORE:</string>
    <string name="salva_credenziale">Salva</string>
    <string name="utenza_add_credenziale">UTENZA SITO</string>
    <string name="inserisci_utenza_sito">Inserisci Utenza Sito</string>
    <string name="credenziali_list_bottom_navigation">Credenziali</string>
    <string name="settings_bottom_navigation">Settings</string>
    <string name="nome_sito_detail_credenziale">NOME SITO</string>
    <string name="descrizione_sito_detail_credenziale">DESCRIZIONE</string>
    <string name="utenza_detail_credenziale">UTENZA</string>
    <string name="password_detail_credenziale">PASSWORD</string>
    <string name="titolo_conferma_eliminazione_credenziale">ELIMINA CREDENZIALE</string>
    <string name="annulla_eliminazione">ANNULLA</string>
    <string name="conferma_eliminazione">CONFERMA</string>
    <string name="errore_generico_eliminazione">Errore nell\'eliminazione, ritentare !</string>
    <string name="messaggio_conferma_eliminazione_credenziale_selezionata">Sei sicuro di voler eliminare la credenziale per il sito %s ?</string>
    <string name="password_copiata">Password copiata negli appunti</string>
    <string name="utenza_copiata">Utente copiato negli appunti</string>

    <string name="autenticazione_fallita">Autenticazione Fallita!</string>
    <string name="biometric_auth_title">Autenticazione Biometrica</string>
    <string name="biometric_auth_subtitle">Autenticati usando uno dei metodi consigliati</string>
    <string name="biometric_auth_use_code">Autenticati usando codice</string>
    <string name="lock">LOCK</string>
    <string name="create_code">Crea un codice di 4 cifre per salvare le tue password</string>
    <string name="create_code_warning">Attenzione!\nPer la tua sicurezza questo codice sarà crittografato e non sarà recuperabile dal sistema, nemmeno in caso di smarrimento.\nSii certo di non dimenticarlo!</string>
    <string name="create_code_code1">Codice…</string>
    <string name="create_code_code2">Ripeti Codice…</string>
    <string name="create_code_conferma">Conferma</string>


<!--    errors-->
    <string name="error_create_code_not_match">Il codice è diverso</string>
    <string name="error_create_code_not_4_digit">Il codice non è di 4 cifre</string>
    <string name="error_verify_code_not_4_digit">Il codice non è di 4 cifre</string>
    <string name="error_verify_code_not_correct">Il codice non è corretto</string>
    <string name="content_description_digit">digit</string>
    <string name="error_verify_code_generic_error">Errore generico</string>
    <string name="inserisci_altre_info_sito">Inserisci Altre info</string>
    <string name="altre_info_add_credenziale">ALTRE INFO:</string>
    <string name="altre_info_detail_credenziale">ALTRE INFO:</string>


</resources>