<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/main_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_dati_dettaglio_credenziale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    style="@style/detailTitle"
                    android:text="@string/nome_sito_detail_credenziale" />

                <TextView
                    android:id="@+id/credenziale_detail_nome"
                    style="@style/detailValue" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/delimitator_detail_credenziale" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    style="@style/detailTitle"
                    android:text="@string/descrizione_sito_detail_credenziale" />

                <TextView
                    android:id="@+id/credenziale_detail_descrizione"
                    style="@style/detailValue" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/delimitator_detail_credenziale" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    style="@style/detailTitle"
                    android:text="@string/utenza_detail_credenziale" />

                <TextView
                    android:id="@+id/credenziale_detail_nome_utenza"
                    style="@style/detailValue" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/delimitator_detail_credenziale" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    style="@style/detailTitle"
                    android:text="@string/password_detail_credenziale" />

                <TextView
                    android:id="@+id/credenziale_detail_password"
                    style="@style/detailValue" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/delimitator_detail_credenziale" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    style="@style/detailTitle"
                    android:text="@string/altre_info_detail_credenziale" />

                <TextView
                    android:id="@+id/credenziale_detail_altre_info"
                    style="@style/detailValue" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>